
FEATURE  [CORE] Setting for skin kiosk mode. See pull request in Github.

FIX      Fixed crash when setting display_launcher_roms was True.

FIX      When fixing ROM Collections the order of the ROM list is lost. Repaired items are
         placed at the end of the list and the original order is lost.
         This was a very long standing bug.


[B]Advanced Emulator Launcher | version 0.9.8 | 16 September 2019[/B]

FEATURE  [CORE] Added new artwork contributed by Sagrath.

FEATURE  [CORE] In XML configuration files, support multiple <args> tag and deprecate <args_extra>

FEATURE  [SCRAPERS] In ScreenScraper, if a ZIP file contains one and only one archive
         use it to calculate checksums and not the ZIP file itself.

FIX      Fixed a path related issue in _command_add_new_category() and
         _command_render_all_ROMs().


[B]Advanced Emulator Launcher | version 0.9.8-beta1 | 06 September 2019[/B]

FEATURE  [SCRAPERS] Copy scraper stuff from master branch by Chrisism.

FEATURE  [SCRAPERS] Fix MobyGames scraper and use new MobyGames API.
         See http://www.mobygames.com/info/api

FEATURE  [SCRAPERS] Fix TheGamesDB scraper.
         There has been a change in the web site including a new API.
         See https://github.com/Wintermute0110/plugin.program.advanced.emulator.launcher/issues/75

FEATURE  [SCRAPERS] Have a look at ScreenScraper and consider it for an online scraper.
         See https://www.screenscraper.fr/
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2622839#pid2622839

FEATURE  [SCRAPERS] Fix ArcadeDB scraper. Use the new ArcadeDB API.
         It has been a while since this scraper is not working any more.

FEATURE  [SCRAPERS] Fix AEL Offline Scraper.

FEATURE  [SCRAPERS] Add support for ScummVM platform in the Offline Scraper.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2629084#pid2629084

FEATURE  [SCRAPERS] Warn user if missing scraper API keys, required stuff, etc., before scraping.